--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
 apply plugin: 'com.android.library'
 
+buildscript {
+    ext.android_support_lib = 'v7:23.0.1'
+}
+
+dependencies {
+    compile "com.android.support:appcompat-$android_support_lib"
+}
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+
+    useLibrary 'org.apache.http.legacy'
 
     sourceSets {
         main {
