--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
+
+    lintOptions {
+        abortOnError false
+    }
+
+
+
     // use with build tools >= 23
     useLibrary 'org.apache.http.legacy'
 
