--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,23 @@
 apply plugin: 'com.android.library'
 
-dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-analytics:11.0.0'
+repositories {
+    google()
+    jcenter()
 }
+
+dependencies {
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+}
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
 
     lintOptions {
         abortOnError false
     }
-
 
 
     // use with build tools >= 23
@@ -23,5 +28,8 @@ android {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
         }
+    }
+    defaultConfig {
+        minSdkVersion 19
     }
 }
